<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/default_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.1"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/LinearLayout_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10px"
            android:layout_marginRight="10px"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblAccount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:text="@string/login_label_username"
                android:textSize="12pt" >
            </TextView>

            <EditText
                android:id="@+id/editBoxAccount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:text="" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10px"
            android:layout_marginRight="10px"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lblPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:text="@string/login_label_password"
                android:textSize="12pt" >
            </TextView>

            <EditText
                android:id="@+id/editBoxPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:password="true"
                android:text="" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10px"
            android:layout_marginRight="10px"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_label_signin"
                android:textSize="9pt" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>