<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/paper01" >
 
    <LinearLayout
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/str_youjian_receiver"
            android:textSize="16sp"
            android:layout_gravity="bottom"
            android:textColor="#404040"/>
        <EditText
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dip"
            android:id="@+id/mail_to"
            android:layout_height="wrap_content"
            android:layout_width="170dip"
            android:background="@android:color/transparent"
            android:inputType="textEmailAddress"/>
        <ImageButton
            android:id="@+id/btn_email_open_constact"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/email_add_constact"/>
    </LinearLayout>
    <!-- 下滑虚线 -->
    <LinearLayout
        android:layout_height="2dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/xuxiang_style"/>
    <LinearLayout
        android:layout_marginTop="10dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/str_youjian_cc"
            android:textSize="16sp"
            android:layout_gravity="bottom"
            android:textColor="#404040"/>
        <EditText
            android:layout_marginLeft="10dip"
            android:id="@+id/mail_from"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:enabled="true"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_height="2dp"
        android:layout_width="match_parent"
        android:background="@drawable/xuxiang_style"/>
     <LinearLayout
        android:layout_marginTop="10dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/str_youjian_subject"
            android:textSize="16sp"
            android:layout_gravity="bottom"
            android:textColor="#404040"/>
        <EditText
            android:layout_gravity="bottom"
            android:layout_marginLeft="20dip"
            android:id="@+id/mail_topic"
            android:layout_height="wrap_content"
            android:layout_width="170dip"
            android:background="@android:color/transparent"/>
        <ImageButton
            android:id="@+id/add_att"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/ic_action_attachment"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_height="2dp"
        android:layout_width="match_parent"
        android:background="@drawable/xuxiang_style"/>

    <LinearLayout 
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginBottom="20dip"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        >
                <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/str_youjian_body"
            android:textSize="16sp"
            android:textColor="#404040"/>
        <EditText
            android:layout_marginLeft="5dip"
            android:id="@+id/content"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:gravity="top|left"
            android:background="@android:color/transparent"/>
    </LinearLayout>

</LinearLayout>
