<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/default_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/RelativeLayout02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15.0px"
        android:layout_marginRight="15.0px"
        android:layout_marginTop="100.0px"
        android:background="@drawable/login_back"
        android:paddingBottom="10.0px"
        android:paddingTop="21.0px" >

        <EditText
            android:id="@+id/login_edit_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5.0px"
            android:layout_marginLeft="5.0dip"
            android:layout_marginRight="5.0dip"
            android:layout_marginTop="5.0dip"
            android:background="@drawable/edit_login"
            android:inputType="number"
            android:paddingLeft="80.0sp"
            android:saveEnabled="true" />

        <TextView
            android:id="@+id/login_textview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/login_edit_account"
            android:layout_alignLeft="@+id/login_edit_account"
            android:layout_alignTop="@+id/login_edit_account"
            android:layout_marginRight="15.0sp"
            android:gravity="center_vertical"
            android:paddingLeft="10.0sp"
            android:text="@string/login_label_username"
            android:textColor="#ff3f3f3f"
            android:textSize="16.0dip" />

        <ImageButton
            android:id="@+id/ImageButton02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/login_edit_account"
            android:layout_alignRight="@+id/login_edit_account"
            android:layout_alignTop="@+id/login_edit_account"
            android:layout_marginRight="1.0dip"
            android:background="@drawable/more_select" />

        <EditText
            android:id="@+id/login_edit_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_edit_account"
            android:layout_alignRight="@+id/login_edit_account"
            android:layout_below="@+id/login_edit_account"
            android:layout_marginRight="1.0dip"
            android:background="@drawable/edit_login"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="80.0sp"
            android:saveEnabled="true" />

        <TextView
            android:id="@+id/login_textview2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/login_edit_pwd"
            android:layout_alignRight="@+id/TextView01"
            android:layout_alignTop="@+id/login_edit_pwd"
            android:gravity="center_vertical"
            android:paddingLeft="10.0sp"
            android:text="@string/login_label_password"
            android:textColor="#ff3f3f3f"
            android:textSize="16.0dip" />

        <CheckBox
            android:id="@+id/login_cb_savepwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/login_btn_login"
            android:layout_below="@+id/login_textview2"
            android:layout_marginRight="10sp"
            android:layout_marginTop="10sp"
            android:button="@drawable/btn_check"
            android:paddingLeft="10.0px"
            android:text="@string/login_label_savepwd"
            android:textColor="#ff222222"
            android:textSize="16.0sp" />
        <!--
                  <CheckBox android:textSize="16.0sp" android:textColor="#ff222222"
				android:id="@+id/login_cb_autologin" android:paddingLeft="10.0px"
				android:layout_marginTop="10sp"
				android:layout_marginRight="10sp"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:button="@drawable/btn_check"
				android:text="@string/login_label_auto_login"
				android:layout_below="@+id/TextView02"
				android:layout_toRightOf="@+id/login_cb_savepwd"
				android:layout_alignBottom="@+id/login_btn_login" />
        -->

        <Button
            android:id="@+id/login_btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_textview2"
            android:layout_toRightOf="@+id/login_cb_savepwd"
            android:background="@drawable/btn_login_selector"
            android:text="自助注册"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_textview2"
            android:layout_toRightOf="@+id/login_btn_register"
            android:background="@drawable/btn_login_selector"
            android:text="@string/login_label_signin"
            android:textColor="@color/white" />
    </RelativeLayout>

</LinearLayout>